# ies-metrics-lab

./: CONTRIBUTING.md  Makefile  README.md  mapping_rules.yaml  pyproject.toml
.github/Workflows/: ci.yml
app/: main.py
app/static/: index.html
fixtures/: abc_001.json  am_001.json  am_002.json  cct_001.json  dst_001.json  ev_001.json  fb_001.json  invariant_pressure_001.json  invariant_pressure_002.json  ngw_001.json  oc_001.json  rj_001.json  scs_001.json  sft_001.json
notebooks/: analysis.ipynb
src/ies_lab/: __init__.py  aggregator.py  engine.py  fixture.py  loader.py  mapping.py  metric_detectors.py  run_logger.py  runner.py  scorer.py  search.py  sentinel.py  transcript.py
tests/: test_aggregator.py  test_audit_session.py  test_engine.py  test_medium_batch.py  test_metric_detectors.py  test_runner_dedup.py  test_scorer_negation.py  test_transcript.py
tools/: AGENT_README.md  aintegrity_agent.py  audit_session.py  patch_fixtures.py
transcripts/: constitutional_ai_master_findings_log_updated.md  constitutional_ai_session_3_log.md  constitutional_ai_session_theme12_transparency.md  example_clean.txt  example_ev.txt  example_fb.txt  session_report_full.md
