[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ies-lab"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "jsonschema>=4.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
