[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ies-lab"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "jsonschema>=4.0"]

[project.optional-dependencies]
web = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
  "python-multipart>=0.0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
